--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -13,6 +13,10 @@ on:
 name: R-CMD-check-final
 
 jobs:
+  
+  env: 
+    GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
