--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -73,11 +73,11 @@ jobs:
           error-on: '"warning"'
 
       - name: Build the package
-        if: ${{ matrix.config.os == 'ubuntu-latest' && (matrix.config.r == 'release' | matrix.config.r == 'devel') }}
+        if: ${{ matrix.config.os == 'ubuntu-latest' && (matrix.config.r == 'release' || matrix.config.r == 'devel') }}
         run: R CMD build .
 
       - uses: actions/upload-artifact@v4
-        if: ${{ matrix.config.os == 'ubuntu-latest' && (matrix.config.r == 'release' | matrix.config.r == 'devel') }}
+        if: ${{ matrix.config.os == 'ubuntu-latest' && (matrix.config.r == 'release' || matrix.config.r == 'devel') }}
         with:
           name: epiworldR-built-package-${{ runner.os }}
           path: epiworldR_*.tar.gz
