--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ matrix.config.os == 'ubuntu-latest' && (matrix.config.r == 'release' || matrix.config.r == 'devel') }}
         with:
-          name: epiworldR-built-package-${{ runner.os }}
+          name: epiworldR-built-package-${{ matrix.config.os }}-${{ matrix.config.r }}
           path: epiworldR_*.tar.gz
           retention-days: 7
           
