--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,7 +12,8 @@ RUN \
   wget https://github.com/jgm/pandoc/releases/download/3.2.1/pandoc-3.2.1-1-amd64.deb && \
   dpkg -i pandoc-3.2.1-1-amd64.deb
 
-RUN install2.r cpp11 rmarkdown roxygen2 tinytest data.table netplot
+RUN install2.r cpp11 rmarkdown roxygen2 tinytest data.table netplot \
+  devtools
 
 RUN apt-get install -y --no-install-recommends && \
   install2.r languageserver
