--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install styler
         run: |
           options(repos = c(CRAN = "https://packagemanager.posit.co/cran/latest"))
-          install.packages("styler")
+          install.packages("styler", lib = Sys.getenv("R_LIBS_USER"))
         shell: Rscript {0}
 
       - name: Run pre-commit hooks
