--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
 
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
       - name: Install styler
         run: |
           options(repos = c(CRAN = "https://packagemanager.posit.co/cran/latest"))
