Both can only be used in mac and windows

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install styler
         run: |
           options(repos = c(CRAN = "https://packagemanager.posit.co/cran/latest"))
-          install.packages("styler", type="both")
+          install.packages("styler")
         shell: Rscript {0}
 
       - name: Run pre-commit hooks
