Adding jammy to the repo

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install styler
         run: |
-          options(repos = c(CRAN = "https://packagemanager.posit.co/cran/latest"))
+          options(repos = c(CRAN = "https://packagemanager.posit.co/cran/__linux__/jammy/latest"))
           install.packages("styler")
         shell: Rscript {0}
 
