--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -25,6 +25,20 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Cache pre-commit
+        uses: actions/cache@v4
+        id: cache-pre-commit
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ hashFiles('.pre-commit-config') }}
+
+      - name: Setup pre-commit
+        if: steps.cache-pre-commit.outputs.cache-hit != 'true'
+        run: |
+          pip install pre-commit
+          pre-commit install
+        shell: bash
+
       - name: Install styler
         run: |
           options(repos = c(CRAN = "https://packagemanager.posit.co/cran/__linux__/jammy/latest"))
@@ -32,4 +46,4 @@ jobs:
         shell: Rscript {0}
 
       - name: Run pre-commit hooks
-        uses: pre-commit/action@v3.0.1
+        bash: pre-commit run --all-files
