--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -30,13 +30,13 @@ jobs:
         id: cache-pre-commit
         with:
           path: ~/.cache/pre-commit
-          key: pre-commit-${{ hashFiles('.pre-commit-config') }}
+          key: pre-commit-${{ hashFiles('./.pre-commit-config.yaml') }}
 
       - name: Setup pre-commit
         if: steps.cache-pre-commit.outputs.cache-hit != 'true'
         run: |
           pip install pre-commit
-          pre-commit install
+          pre-commit install --install-hooks
         shell: bash
 
       - name: Install styler
