--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
+      # - name: Set up R
+      #   uses: r-lib/actions/setup-r@v2
 
       - name: Cache pre-commit
         uses: actions/cache@v4
@@ -41,11 +41,11 @@ jobs:
           pre-commit install --install-hooks
         shell: bash
 
-      - name: Install styler
-        run: |
-          options(repos = c(CRAN = "https://packagemanager.posit.co/cran/__linux__/jammy/latest"))
-          install.packages("styler")
-        shell: Rscript {0}
+      # - name: Install styler
+      #   run: |
+      #     options(repos = c(CRAN = "https://packagemanager.posit.co/cran/__linux__/jammy/latest"))
+      #     install.packages("styler")
+      #   shell: Rscript {0}
 
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
