Run 'make docs' and add cpp11, NAMESPACE, and roxygen files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
+export(LFMCMC)
 export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
