--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,3 +1,3 @@
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_FLAG@
 PKG_CXXFLAGS=@OPENMP_FLAG@ -I../inst/include/ $(EPI_CONFIG) \
-    -Dprintf_epiworld=Rprintf
+    -Dprintf_epiworld=Rprintf -Depiworld_double=double
