Add run method to LFMCMC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
+S3method(run,epiworld_lfmcmc)
 S3method(run,epiworld_model)
 S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
