Add set_observed_data to LFMCMC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(set_incubation_ptr)
 export(set_name)
 export(set_name_tool)
 export(set_name_virus)
+export(set_observed_data.epiworld_lfmcmc)
 export(set_param)
 export(set_prob_death)
 export(set_prob_death_fun)
