Add set_proposal_fun, set_simulation_fun, set_summary_fun, and set_kernel_fun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ export(set_distribution_virus)
 export(set_incubation)
 export(set_incubation_fun)
 export(set_incubation_ptr)
+export(set_kernel_fun.epiworld_lfmcmc)
 export(set_name)
 export(set_name_tool)
 export(set_name_virus)
@@ -195,9 +196,12 @@ export(set_prob_infecting_ptr)
 export(set_prob_recovery)
 export(set_prob_recovery_fun)
 export(set_prob_recovery_ptr)
+export(set_proposal_fun.epiworld_lfmcmc)
 export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
+export(set_simulation_fun.epiworld_lfmcmc)
+export(set_summary_fun.epiworld_lfmcmc)
 export(set_susceptibility_reduction)
 export(set_susceptibility_reduction_fun)
 export(set_susceptibility_reduction_ptr)
