--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,7 +72,6 @@ S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
-S3method(run,epiworld_lfmcmc)
 S3method(run,epiworld_model)
 S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
@@ -169,6 +168,7 @@ export(rm_entity)
 export(rm_tool)
 export(rm_virus)
 export(run)
+export(run_lfmcmc.epiworld_lfmcmc)
 export(run_multiple)
 export(run_multiple_get_results)
 export(set_agents_data)
