Add seed, set_param_nams_, set_stats_names, print to lfmcmc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ S3method(print,epiworld_agents_tools)
 S3method(print,epiworld_entities)
 S3method(print,epiworld_entity)
 S3method(print,epiworld_globalevent)
+S3method(print,epiworld_lfmcmc)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
 S3method(print,epiworld_tool)
@@ -171,6 +172,7 @@ export(run)
 export(run_lfmcmc.epiworld_lfmcmc)
 export(run_multiple)
 export(run_multiple_get_results)
+export(seed_lfmcmc.epiworld_lfmcmc)
 export(set_agents_data)
 export(set_death_reduction)
 export(set_death_reduction_fun)
@@ -186,6 +188,7 @@ export(set_name)
 export(set_name_tool)
 export(set_name_virus)
 export(set_observed_data.epiworld_lfmcmc)
+export(set_par_names.epiworld_lfmcmc)
 export(set_param)
 export(set_prob_death)
 export(set_prob_death_fun)
@@ -201,6 +204,7 @@ export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
 export(set_simulation_fun.epiworld_lfmcmc)
+export(set_stats_names.epiworld_lfmcmc)
 export(set_summary_fun.epiworld_lfmcmc)
 export(set_susceptibility_reduction)
 export(set_susceptibility_reduction_fun)
