--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,9 +74,18 @@ S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
 S3method(run,epiworld_model)
+S3method(run_lfmcmc,epiworld_lfmcmc)
 S3method(run_multiple,epiworld_model)
+S3method(seed_lfmcmc,epiworld_lfmcmc)
+S3method(set_kernel_fun,epiworld_lfmcmc)
 S3method(set_name,epiworld_model)
+S3method(set_observed_data,epiworld_lfmcmc)
+S3method(set_par_names,epiworld_lfmcmc)
 S3method(set_param,epiworld_model)
+S3method(set_proposal_fun,epiworld_lfmcmc)
+S3method(set_simulation_fun,epiworld_lfmcmc)
+S3method(set_stats_names,epiworld_lfmcmc)
+S3method(set_summary_fun,epiworld_lfmcmc)
 S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
 S3method(verbose_off,epiworld_model)
@@ -169,10 +178,10 @@ export(rm_entity)
 export(rm_tool)
 export(rm_virus)
 export(run)
-export(run_lfmcmc.epiworld_lfmcmc)
+export(run_lfmcmc)
 export(run_multiple)
 export(run_multiple_get_results)
-export(seed_lfmcmc.epiworld_lfmcmc)
+export(seed_lfmcmc)
 export(set_agents_data)
 export(set_death_reduction)
 export(set_death_reduction_fun)
@@ -183,12 +192,12 @@ export(set_distribution_virus)
 export(set_incubation)
 export(set_incubation_fun)
 export(set_incubation_ptr)
-export(set_kernel_fun.epiworld_lfmcmc)
+export(set_kernel_fun)
 export(set_name)
 export(set_name_tool)
 export(set_name_virus)
-export(set_observed_data.epiworld_lfmcmc)
-export(set_par_names.epiworld_lfmcmc)
+export(set_observed_data)
+export(set_par_names)
 export(set_param)
 export(set_prob_death)
 export(set_prob_death_fun)
@@ -199,13 +208,13 @@ export(set_prob_infecting_ptr)
 export(set_prob_recovery)
 export(set_prob_recovery_fun)
 export(set_prob_recovery_ptr)
-export(set_proposal_fun.epiworld_lfmcmc)
+export(set_proposal_fun)
 export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
-export(set_simulation_fun.epiworld_lfmcmc)
-export(set_stats_names.epiworld_lfmcmc)
-export(set_summary_fun.epiworld_lfmcmc)
+export(set_simulation_fun)
+export(set_stats_names)
+export(set_summary_fun)
 export(set_susceptibility_reduction)
 export(set_susceptibility_reduction_fun)
 export(set_susceptibility_reduction_ptr)
