Add set_rand_engine function and update constructor to extract rand_engine from model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ S3method(set_observed_data,epiworld_lfmcmc)
 S3method(set_par_names,epiworld_lfmcmc)
 S3method(set_param,epiworld_model)
 S3method(set_proposal_fun,epiworld_lfmcmc)
+S3method(set_rand_engine_lfmcmc,epiworld_lfmcmc)
 S3method(set_simulation_fun,epiworld_lfmcmc)
 S3method(set_stats_names,epiworld_lfmcmc)
 S3method(set_summary_fun,epiworld_lfmcmc)
@@ -209,6 +210,7 @@ export(set_prob_recovery)
 export(set_prob_recovery_fun)
 export(set_prob_recovery_ptr)
 export(set_proposal_fun)
+export(set_rand_engine_lfmcmc)
 export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
