Add factory methods for norm_reflective proposal function and gaussian kernel function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,8 @@ export(has_tool)
 export(has_virus)
 export(initial_states)
 export(load_agents_entities_ties)
+export(make_kernel_fun_gaussian_lfmcmc)
+export(make_proposal_norm_reflective_lfmcmc)
 export(make_saver)
 export(plot_generation_time)
 export(plot_incidence)
