Add simpler use proposal/kernel functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,6 +228,8 @@ export(set_transmission_reduction_ptr)
 export(size)
 export(tool)
 export(tool_fun_logit)
+export(use_kernel_fun_gaussian)
+export(use_proposal_norm_reflective)
 export(verbose_off)
 export(verbose_on)
 export(virus)
