--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ S3method(print,epiworld_agents_tools)
 S3method(print,epiworld_entities)
 S3method(print,epiworld_entity)
 S3method(print,epiworld_globalevent)
+S3method(print,epiworld_lfmcmc)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
 S3method(print,epiworld_tool)
@@ -73,13 +74,22 @@ S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
 S3method(run,epiworld_model)
+S3method(run_lfmcmc,epiworld_lfmcmc)
 S3method(run_multiple,epiworld_model)
+S3method(set_kernel_fun,epiworld_lfmcmc)
 S3method(set_name,epiworld_model)
+S3method(set_observed_data,epiworld_lfmcmc)
+S3method(set_par_names,epiworld_lfmcmc)
 S3method(set_param,epiworld_model)
+S3method(set_proposal_fun,epiworld_lfmcmc)
+S3method(set_simulation_fun,epiworld_lfmcmc)
+S3method(set_stats_names,epiworld_lfmcmc)
+S3method(set_summary_fun,epiworld_lfmcmc)
 S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
+export(LFMCMC)
 export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
@@ -167,6 +177,7 @@ export(rm_entity)
 export(rm_tool)
 export(rm_virus)
 export(run)
+export(run_lfmcmc)
 export(run_multiple)
 export(run_multiple_get_results)
 export(set_agents_data)
@@ -179,9 +190,12 @@ export(set_distribution_virus)
 export(set_incubation)
 export(set_incubation_fun)
 export(set_incubation_ptr)
+export(set_kernel_fun)
 export(set_name)
 export(set_name_tool)
 export(set_name_virus)
+export(set_observed_data)
+export(set_par_names)
 export(set_param)
 export(set_prob_death)
 export(set_prob_death_fun)
@@ -192,9 +206,13 @@ export(set_prob_infecting_ptr)
 export(set_prob_recovery)
 export(set_prob_recovery_fun)
 export(set_prob_recovery_ptr)
+export(set_proposal_fun)
 export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
+export(set_simulation_fun)
+export(set_stats_names)
+export(set_summary_fun)
 export(set_susceptibility_reduction)
 export(set_susceptibility_reduction_fun)
 export(set_susceptibility_reduction_ptr)
@@ -204,6 +222,8 @@ export(set_transmission_reduction_ptr)
 export(size)
 export(tool)
 export(tool_fun_logit)
+export(use_kernel_fun_gaussian)
+export(use_proposal_norm_reflective)
 export(verbose_off)
 export(verbose_on)
 export(virus)
