Implement today() in model-methods.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ S3method(set_stats_names,epiworld_lfmcmc)
 S3method(set_summary_fun,epiworld_lfmcmc)
 S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
+S3method(today,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
 export(LFMCMC)
@@ -220,6 +221,7 @@ export(set_transmission_reduction)
 export(set_transmission_reduction_fun)
 export(set_transmission_reduction_ptr)
 export(size)
+export(today)
 export(tool)
 export(tool_fun_logit)
 export(use_kernel_fun_gaussian)
