--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("[",epiworld_agents)
 S3method("[",epiworld_entities)
+S3method(add_param,epiworld_model)
 S3method(add_tool,epiworld_model)
 S3method(add_virus,epiworld_model)
 S3method(add_virus,epiworld_seir)
@@ -107,6 +108,7 @@ export(ModelSISD)
 export(ModelSURV)
 export(add_entity)
 export(add_globalevent)
+export(add_param)
 export(add_tool)
 export(add_tool_agent)
 export(add_tool_n)
@@ -174,6 +176,7 @@ export(plot_reproductive_number)
 export(queuing_off)
 export(queuing_on)
 export(rm_entity)
+export(rm_globalevent)
 export(rm_tool)
 export(rm_virus)
 export(run)
