--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,10 @@ S3method(get_n_viruses,epiworld_model)
 S3method(get_name,epiworld_model)
 S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
+S3method(get_params_mean,epiworld_lfmcmc)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
+S3method(get_stats_mean,epiworld_lfmcmc)
 S3method(get_today_total,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(get_transmissions,epiworld_diffnet)
@@ -150,9 +152,11 @@ export(get_name_virus)
 export(get_ndays)
 export(get_network)
 export(get_param)
+export(get_params_mean)
 export(get_reproductive_number)
 export(get_state)
 export(get_states)
+export(get_stats_mean)
 export(get_today_total)
 export(get_tool)
 export(get_transition_probability)
