Multiple fixes to LFMCMC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,8 @@ S3method(get_n_viruses,epiworld_model)
 S3method(get_name,epiworld_model)
 S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
-S3method(get_params_mean,epiworld_lfmcmc)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
-S3method(get_stats_mean,epiworld_lfmcmc)
 S3method(get_today_total,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(get_transmissions,epiworld_diffnet)
@@ -77,17 +75,9 @@ S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
 S3method(run,epiworld_model)
-S3method(run_lfmcmc,epiworld_lfmcmc)
 S3method(run_multiple,epiworld_model)
-S3method(set_kernel_fun,epiworld_lfmcmc)
 S3method(set_name,epiworld_model)
-S3method(set_observed_data,epiworld_lfmcmc)
-S3method(set_par_names,epiworld_lfmcmc)
 S3method(set_param,epiworld_model)
-S3method(set_proposal_fun,epiworld_lfmcmc)
-S3method(set_simulation_fun,epiworld_lfmcmc)
-S3method(set_stats_names,epiworld_lfmcmc)
-S3method(set_summary_fun,epiworld_lfmcmc)
 S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
 S3method(today,epiworld_model)
@@ -131,6 +121,8 @@ export(distribute_virus_set)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
+export(get_accepted_params)
+export(get_accepted_stats)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
@@ -143,7 +135,10 @@ export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
 export(get_hist_virus)
+export(get_n_parameters)
 export(get_n_replicates)
+export(get_n_samples)
+export(get_n_statistics)
 export(get_n_tools)
 export(get_n_viruses)
 export(get_name)
@@ -156,6 +151,7 @@ export(get_params_mean)
 export(get_reproductive_number)
 export(get_state)
 export(get_states)
+export(get_statistics_hist)
 export(get_stats_mean)
 export(get_today_total)
 export(get_tool)
