Add queuing_off changes to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,8 @@ S3method(print,epiworld_tool_fun)
 S3method(print,epiworld_virus)
 S3method(print,epiworld_virus_fun)
 S3method(queuing_off,epiworld_model)
+S3method(queuing_off,epiworld_seirconn)
+S3method(queuing_off,epiworld_sirconn)
 S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
 S3method(queuing_on,epiworld_sirconn)
