Update R API to match C++ changes to set_stat_names and set_param_names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,7 +200,7 @@ export(set_name_tool)
 export(set_name_virus)
 export(set_observed_data)
 export(set_param)
-export(set_param_names)
+export(set_params_names)
 export(set_prob_death)
 export(set_prob_death_fun)
 export(set_prob_death_ptr)
@@ -215,7 +215,7 @@ export(set_recovery_enhancer)
 export(set_recovery_enhancer_fun)
 export(set_recovery_enhancer_ptr)
 export(set_simulation_fun)
-export(set_stat_names)
+export(set_stats_names)
 export(set_summary_fun)
 export(set_susceptibility_reduction)
 export(set_susceptibility_reduction_fun)
