Fix naming conventions to match C++ library (#58)
* Copy changes to C++ library

* Rename relevant variables and methods to be consistent with latest C++ changes

* Update namespace and build docs

* Pull in latest changes from C++ library

* Update R API to match C++ changes to set_stat_names and set_param_names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,10 +135,12 @@ export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
 export(get_hist_virus)
-export(get_n_parameters)
+export(get_mean_params)
+export(get_mean_stats)
+export(get_n_params)
 export(get_n_replicates)
 export(get_n_samples)
-export(get_n_statistics)
+export(get_n_stats)
 export(get_n_tools)
 export(get_n_viruses)
 export(get_name)
@@ -147,12 +149,10 @@ export(get_name_virus)
 export(get_ndays)
 export(get_network)
 export(get_param)
-export(get_params_mean)
 export(get_reproductive_number)
+export(get_sample_stats)
 export(get_state)
 export(get_states)
-export(get_statistics_hist)
-export(get_stats_mean)
 export(get_today_total)
 export(get_tool)
 export(get_transition_probability)
@@ -199,8 +199,8 @@ export(set_name)
 export(set_name_tool)
 export(set_name_virus)
 export(set_observed_data)
-export(set_par_names)
 export(set_param)
+export(set_params_names)
 export(set_prob_death)
 export(set_prob_death_fun)
 export(set_prob_death_ptr)
