Add verbose_on/off functions to lfmcmc to enable/disable progress bar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,9 @@ S3method(set_param,epiworld_model)
 S3method(size,epiworld_model)
 S3method(summary,epiworld_model)
 S3method(today,epiworld_model)
+S3method(verbose_off,epiworld_lfmcmc)
 S3method(verbose_off,epiworld_model)
+S3method(verbose_on,epiworld_lfmcmc)
 S3method(verbose_on,epiworld_model)
 export(LFMCMC)
 export(ModelDiffNet)
