Fix documentation error and update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,12 +125,22 @@ export(distribute_virus_set)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
-export(get_accepted_params)
-export(get_accepted_stats)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
 export(get_agents_tools)
+export(get_all_accepted_kernel_scores)
+export(get_all_accepted_params)
+export(get_all_accepted_stats)
+export(get_all_sample_acceptance)
+export(get_all_sample_drawn_prob)
+export(get_all_sample_kernel_scores)
+export(get_all_sample_params)
+export(get_all_sample_stats)
+export(get_current_accepted_params)
+export(get_current_accepted_stats)
+export(get_current_proposed_params)
+export(get_current_proposed_stats)
 export(get_entities)
 export(get_entity_name)
 export(get_entity_size)
@@ -139,6 +149,7 @@ export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
 export(get_hist_virus)
+export(get_initial_params)
 export(get_mean_params)
 export(get_mean_stats)
 export(get_n_params)
@@ -152,9 +163,9 @@ export(get_name_tool)
 export(get_name_virus)
 export(get_ndays)
 export(get_network)
+export(get_observed_stats)
 export(get_param)
 export(get_reproductive_number)
-export(get_sample_stats)
 export(get_state)
 export(get_states)
 export(get_today_total)
