--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: epiworldR
 Type: Package
 Title: Fast Agent-Based Epi Models
-Version: 0.6-0.0
+Version: 0.6.0.0
 Authors@R: c(
-  person(given="George", family="Vega Yon", role=c("aut","cre"),
+  person(given="George", family="Vega Yon", role=c("aut"),
   email="g.vegayon@gmail.com", comment = c(ORCID = "0000-0002-3171-0844")),
   person(given="Derek", family="Meyer", role=c("aut"),
   email="derekmeyer37@gmail.com", comment = c(ORCID = "0009-0005-1350-6988")),
-  person(given="Andrew", family="Pulsipher", role=c("aut"),
+  person(given="Andrew", family="Pulsipher", role=c("aut", "cre"),
   email="pulsipher.a@gmail.com", comment = c(ORCID = "0000-0002-0773-3210")),
   person(given="Susan", family="Holmes", role = "rev", comment =
          c(what = "JOSS reviewer", ORCID="0000-0002-2208-8168")),
