--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -28,12 +28,12 @@ jobs:
         config:
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: macOS-13,       r: 'devel', http-user-agent: 'release'}
           - {os: windows-latest, r: 'devel', http-user-agent: 'release'}
           # se older ubuntu to maximise backward compatibility
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel'}
+          - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,  r: 'release'}
+          - {os: ubuntu-latest,  r: 'oldrel'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -65,7 +65,7 @@ jobs:
           error-on: '"warning"'
 
       - uses: r-lib/actions/check-r-package@v2
-        if: ${{ matrix.config.os != 'ubuntu-latest' || matrix.config.r != 're;ease' }}
+        if: ${{ matrix.config.os != 'ubuntu-latest' || matrix.config.r != 'release' }}
         with:
           upload-snapshots: false
           upload-results: false
