Adding the model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(plot,epiworld_diffnet)
 S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
+S3method(plot,epiworld_measlesquarantine)
 S3method(plot,epiworld_multiple_save)
 S3method(plot,epiworld_multiple_save_i)
 S3method(plot,epiworld_multiple_save_reproductive_number)
@@ -89,6 +90,7 @@ S3method(verbose_on,epiworld_lfmcmc)
 S3method(verbose_on,epiworld_model)
 export(LFMCMC)
 export(ModelDiffNet)
+export(ModelMeaslesQuarantine)
 export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSEIRD)
