--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,11 +5,6 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-	"features": {
-        "ghcr.io/devcontainers/features/github-cli": {
-            "version": "latest"
-        }
-    },
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -19,7 +14,11 @@
 				"tianyishi.rmarkdown"
 			]
 		}
-	}
+	},
+	"mounts": [
+        // Mount the .vscode configuration into the container
+        "source=${localWorkspaceFolder}/.devcontainer/.vscode,target=/workspaces/${localWorkspaceFolderBasename}/.vscode,type=bind,consistency=cached"
+    ]
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
