--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -30,7 +30,6 @@ jobs:
           - {os: windows-latest, r: 'release'}
           - {os: macOS-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: windows-latest, r: 'devel', http-user-agent: 'release'}
-          # se older ubuntu to maximise backward compatibility
           - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,  r: 'release'}
           - {os: ubuntu-latest,  r: 'oldrel'}
@@ -49,6 +48,12 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+
+      - name: Install system dependencies (macOS)
+        if: ${{ matrix.config.os == 'macOS-latest' && matrix.config.r == 'devel' }}
+        run: |
+          brew install gettext
+          brew link --force gettext
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
