--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -49,11 +49,11 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: Install system dependencies (macOS)
+      - name: Fix missing libraries (macOS)
         if: ${{ matrix.config.os == 'macOS-latest' && matrix.config.r == 'devel' }}
         run: |
-          brew install gettext
-          brew link --force gettext
+          brew unlink gettext && brew link --force gettext
+          find /usr -name libintl* -print 2>/dev/null
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
