Add draw_mermaid function to model-methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(distribute_tool_randomly)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
+export(draw_mermaid)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
