--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_lfmcmc)
 S3method(verbose_on,epiworld_model)
 export(LFMCMC)
+export(ModelDiagram)
 export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
@@ -122,6 +123,9 @@ export(distribute_tool_randomly)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
+export(draw_from_data)
+export(draw_from_file)
+export(draw_from_files)
 export(draw_mermaid)
 export(entity)
 export(entity_add_agent)
