--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,10 +123,10 @@ export(distribute_tool_randomly)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
-export(draw_from_data)
-export(draw_from_file)
-export(draw_from_files)
 export(draw_mermaid)
+export(draw_mermaid_from_data)
+export(draw_mermaid_from_file)
+export(draw_mermaid_from_files)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
