--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(draw_mermaid)
 export(draw_mermaid_from_data)
 export(draw_mermaid_from_file)
 export(draw_mermaid_from_files)
+export(draw_mermaid_from_matrix)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
