Implement draw diagram features from C++ library (#97)
* Update with latest C++ library version

* Bump version number to 0.8.0.0

* Fix failing test-sir.R case

* Fix failing case in test-sirconn.R

* Add draw_mermaid function to model-methods.

* Update param names in draw_mermaid() and add tests

* Create ModelDiagram.R and model-diagram.cpp

* Add test file for model-diagram

* Add full tests for ModelDiagram

* Add examples to ModelDiagram and draw_mermaid() and add to getting-started vignette

* Update vignettes

* Add DiagrammeR to Suggests

* Remove ModelDiagram() function and update draw_mermaid functions to return the diagram as a string

* Update model.draw_mermaid function to also return string

* Add draw_mermaid_from_matrix

* Add tests for bad input to draw_mermaid_from_matrix

* Add matrix checks to model diagram

* Clean up ModelDiagram docs and improve tests

* Add message about writing diagram to output file and cleanup tests

* Fix test-sir and test-sirconn tmat_expected

* Update model.draw_mermaid docs to inherit params from model diagram

* Update tests for new model.draw_mermaid behavior

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: epiworldR
 Type: Package
 Title: Fast Agent-Based Epi Models
-Version: 0.6.1.1
+Version: 0.8.0.0
 Depends: R (>= 4.1.0)
 Authors@R: c(
   person(given="George", family="Vega Yon", role=c("aut"),
@@ -33,7 +33,8 @@ Suggests:
     tinytest,
     netplot,
     igraph,
-    data.table
+    data.table,
+    DiagrammeR
 Imports:
     utils
 VignetteBuilder: knitr
