--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,11 @@ export(distribute_tool_randomly)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
+export(draw_mermaid)
+export(draw_mermaid_from_data)
+export(draw_mermaid_from_file)
+export(draw_mermaid_from_files)
+export(draw_mermaid_from_matrix)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
