--- a/.github/workflows/macos-r-cmd-check.yml
+++ b/.github/workflows/macos-r-cmd-check.yml
@@ -5,6 +5,8 @@
 # check-standard.yaml is likely a better choice.
 # usethis::use_github_action("check-standard") will install it.
 on:
+  pull_request:
+    branches: [main, master]
   workflow_dispatch:
 
 name: macOS-latest (devel)
