--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,20 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"reditorsupport.r",
+				"rdebugger.r-debugger",
+				"quarto.quarto",
+				"tianyishi.rmarkdown"
+			]
+		}
+	},
+	"mounts": [
+        // Mount the .vscode configuration into the container
+        "source=${localWorkspaceFolder}/.devcontainer/.vscode,target=/workspaces/${localWorkspaceFolderBasename}/.vscode,type=bind,consistency=cached"
+    ]
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
@@ -19,5 +32,5 @@
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "root"
+	// "remoteUser": "root"
 }
