--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,5 +262,6 @@ importFrom(graphics,plot)
 importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
+importFrom(utils,capture.output)
 importFrom(utils,read.table)
 useDynLib(epiworldR, .registration = TRUE)
