--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(get_transmissions,epiworld_model)
 S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
+S3method(plot,epiworld_model)
 S3method(plot,epiworld_multiple_save)
 S3method(plot,epiworld_multiple_save_i)
 S3method(plot,epiworld_multiple_save_reproductive_number)
