--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,28 +33,14 @@ S3method(get_today_total,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(get_transmissions,epiworld_diffnet)
 S3method(get_transmissions,epiworld_model)
-S3method(plot,epiworld_diffnet)
 S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
-S3method(plot,epiworld_measlesquarantine)
+S3method(plot,epiworld_model)
 S3method(plot,epiworld_multiple_save)
 S3method(plot,epiworld_multiple_save_i)
 S3method(plot,epiworld_multiple_save_reproductive_number)
 S3method(plot,epiworld_repnum)
-S3method(plot,epiworld_seir)
-S3method(plot,epiworld_seirconn)
-S3method(plot,epiworld_seird)
-S3method(plot,epiworld_seirdconn)
-S3method(plot,epiworld_seirmixing)
-S3method(plot,epiworld_sir)
-S3method(plot,epiworld_sirconn)
-S3method(plot,epiworld_sird)
-S3method(plot,epiworld_sirdconn)
-S3method(plot,epiworld_sirmixing)
-S3method(plot,epiworld_sis)
-S3method(plot,epiworld_sisd)
-S3method(plot,epiworld_surv)
 S3method(plot_epi,epiworld_hist)
 S3method(plot_epi,epiworld_hist_virus)
 S3method(plot_epi,epiworld_model)
@@ -262,5 +248,6 @@ importFrom(graphics,plot)
 importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
+importFrom(utils,capture.output)
 importFrom(utils,read.table)
 useDynLib(epiworldR, .registration = TRUE)
