Using parallel computing to read run_multiple

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -245,6 +245,10 @@ export(virus_set_state)
 importFrom(graphics,boxplot)
 importFrom(graphics,legend)
 importFrom(graphics,plot)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
 importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
