Adding new argument to distribute tool and virus randomly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(distribute_tool_randomly)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
+export(distribute_virus_to_set)
 export(draw_mermaid)
 export(draw_mermaid_from_data)
 export(draw_mermaid_from_file)
