--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ RoxygenNote: 7.3.2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 LinkingTo: cpp11
+SystemRequirements: C++23
 Suggests:
     knitr,
     rmarkdown,
