--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(verbose_on,epiworld_lfmcmc)
 S3method(verbose_on,epiworld_model)
 export(LFMCMC)
 export(ModelDiffNet)
+export(ModelMeaslesMixing)
 export(ModelMeaslesQuarantine)
 export(ModelSEIR)
 export(ModelSEIRCONN)
