Renaming model measles quarantine and other change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(LFMCMC)
 export(ModelDiffNet)
 export(ModelMeaslesMixing)
 export(ModelMeaslesQuarantine)
+export(ModelMeaslesSchool)
 export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSEIRD)
